--- a/package.json
+++ b/package.json
@@ -19,58 +19,45 @@
     "@feature": "/feature",
     "@src": "src"
   },
+  "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^1.7.4",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "google-auth-library": "^9.14.0",
+    "googleapis": "^142.0.0",
+    "helmet": "^7.1.0",
+    "joi": "^17.13.3",
+    "joi-password-complexity": "^5.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "module-alias": "^2.2.3",
+    "pg": "^8.12.0",
+    "typeorm": "^0.3.20",
+    "uuid": "^10.0.0",
+    "winston": "^3.14.2"
+  },
+  "description": "",
   "devDependencies": {
-    "@jest/globals": "^29.7.0",
     "@types/bcrypt": "^5.0.2",
     "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/jsonwebtoken": "^9.0.5",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/module-alias": "^2.0.4",
-    "@types/node": "^20.14.15",
-    "@types/swagger-jsdoc": "^6.0.4",
-    "@types/swagger-ui-express": "^4.1.6",
-    "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "eslint": "^8.57.0",
-    "eslint-config-standard-with-typescript": "^43.0.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.1.1",
-    "husky": "^9.0.11",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.0",
+    "@types/node": "^22.5.0",
+    "@types/uuid": "^10.0.0",
+    "husky": "^9.1.5",
+    "nodemon": "^3.1.4",
     "ts-jest": "^29.2.4",
-    "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.4"
-  },
-  "dependencies": {
-    "@aws-sdk/client-s3": "^3.564.0",
-    "@aws-sdk/s3-request-presigner": "^3.564.0",
-    "bcrypt": "^5.1.1",
-    "body-parse": "^0.1.0",
-    "compression": "^1.7.4",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "helmet": "^7.1.0",
-    "joi": "^17.12.3",
-    "joi-password-complexity": "^5.2.0",
-    "jsdoc": "^4.0.2",
-    "jsonwebtoken": "^9.0.2",
-    "module-alias": "^2.2.3",
-    "pg": "^8.12.0",
-    "reflect-metadata": "^0.2.2",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0",
-    "typeorm": "^0.3.20",
-    "uuid": "^9.0.1",
-    "winston": "^3.13.0"
-  },
-  "description": ""
+  }
 }
