--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
     "noImplicitAny": true /* Enable error reporting for expressions and declarations with an implied 'any' type. */,
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/**/*.ts", ".eslintrc.js", "test/**/*.spec.ts"],
+  "include": ["src/**/*.ts", ".eslintrc.js", "test/**/*.ts"],
   "exclude": ["node_modules"]
 }
